C2: assert in PhaseIdealLoop::do_unroll() is subject to undefined behavior

XMLWordPrintable

    • b11

        While working on JDK-8290789, I noticed the following assert:
            assert(stride_con > 0 && ((limit_type->_hi - stride_con) < limit_type->_hi) ||
                   stride_con < 0 && ((limit_type->_lo - stride_con) > limit_type->_lo),
                   "sanity");

        doesn't fire because of UB

              Assignee:
              Tobias Holenstein
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: