8290822: C2: assert in PhaseIdealLoop::do_unroll() is subject to undefined behavior

Backport-of: cd77fcfb5f9156e5f0909fa15a842dde6c25c66a